[project]
name = "llm-all-models-async"
version = "0.1"
description = "Make all LLM sync models available as async"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers = []
requires-python = ">=3.10"
dependencies = [
    "llm>=0.30"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[project.urls]
Homepage = "https://github.com/simonw/llm-all-models-async"
Changelog = "https://github.com/simonw/llm-all-models-async/releases"
Issues = "https://github.com/simonw/llm-all-models-async/issues"
CI = "https://github.com/simonw/llm-all-models-async/actions"

[project.entry-points.llm]
all_models_async = "llm_all_models_async"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
